propellor (4.6.2) UNRELEASED; urgency=medium

  * Systemd.nspawned: Recent systemd versions such as 234 ignore
    non-symlinks in /etc/systemd/system/multi-user.target.wants,
    which was used to configure systemd-nspawn parameters. Instead,
    use a service.d/local.conf file to configure that.

 -- Joey Hess <id@joeyh.name>  Thu, 27 Jul 2017 16:34:37 -0400

propellor (4.6.1) unstable; urgency=medium

  * Added Network.dhcp' and Network.static', which allow specifying
    additional options for interfaces files.
  * Fix build failure on ghc-8.2.1
    Thanks, Sergei Trofimovich.
  * DiskImage: Fix strictness bug in .parttable read/write sequence.

 -- Joey Hess <id@joeyh.name>  Thu, 27 Jul 2017 09:17:32 -0400

propellor (4.6.0) unstable; urgency=medium

  * Add Typeable instance to Bootstrapper, fixing build with old versions
    of ghc.
  * Network.static changed to take address and gateway parameters.
    If you used the old Network.static property, it has been renamed to
    Network.preserveStatic.
    (Minor API change)

 -- Joey Hess <id@joeyh.name>  Wed, 26 Jul 2017 20:02:50 -0400

propellor (4.5.2) unstable; urgency=medium

  * Added Rsync.installed property.
  * Added DiskImage.vmdkBuiltFor property which is useful for booting
    a disk image in VirtualBox.

 -- Joey Hess <id@joeyh.name>  Tue, 25 Jul 2017 17:58:46 -0400

propellor (4.5.1) unstable; urgency=medium

  * Reboot.toKernelNewerThan: If running kernel is new enough, avoid
    looking at what kernels are installed.
    Thanks, Sean Whitton.
  * DiskImage: Avoid re-partitioning disk image unncessarily, for a large
    speedup.

 -- Joey Hess <id@joeyh.name>  Tue, 25 Jul 2017 15:51:33 -0400

propellor (4.5.0) unstable; urgency=medium

  * Generalized the PartSpec DSL, so it can be used for both
    disk image partitioning, and disk device partitioning, with
    different partition sizing methods as appropriate for the different
    uses. (minor API change)